fixing homepage alignment

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -19,7 +19,7 @@ body {
   background-color: #f5f5f5;
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 1px){
   #video-header {
     margin-top: 75px;
   }
@@ -28,7 +28,7 @@ body {
     height: 250px;
     width: 100%;
     color: white;
-    padding-top: 200px;
+    padding-top: 70px;
   }
 
   #search-bar {
@@ -36,22 +36,50 @@ body {
   }
 }
 
-@media (min-width: 992px) and (max-width: 1200px) {
+@media (min-width: 768px){
+  #video-header {
+    margin-top: 75px;
+  }
+
+  .category {
+    height: 250px;
+    width: 100%;
+    color: white;
+    padding-top: 70px;
+  }
+
+  #search-bar {
+    display: none;
+  }
+}
+
+@media (min-width: 980px) {
   #video-header {
     margin-top: 120px;
   }
 
   .category {
+    float: left;
     height: 300px;
-    width: 100%;
+    width: 20%;
     color: white;
-    padding-top: 250px;
+    padding-top: 100px;
   }
 
   #search-reveal {
     display: none;
   }
 }
+
+.content {
+  margin-top: 50px;
+}
+
+.undecorated-link:hover {
+  text-decoration: none;
+}
+
+
 
 @media (min-width: 1200px) {
   #video-header {
@@ -60,7 +88,7 @@ body {
 
   .category {
     height: 300px;
-    width: 100%;
+    width: 20%;
     color: white;
     padding-top: 100px;
   }
